package mastermind;
public interface ModeJeu {


    public  void afficherIndices(LigneIndice ligne, String titre) ;



}
