package model;

public enum Indice {
    BIEN_PLACE,MAL_PLACE, ABSENT
}
